using UnityEngine;

public interface IMissionProvider
{
    void StartMission();
}
